--- a/WindowOpenTK/WindowOpenTK/WindowOpenTK.csproj
+++ b/WindowOpenTK/WindowOpenTK/WindowOpenTK.csproj
@@ -8,7 +8,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Assets\box.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Assets\box.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="OpenTK" Version="4.9.4" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.9" />
   </ItemGroup>
 
 </Project>
