--- a/WindowOpenTK/WindowOpenTK/WindowOpenTK.csproj
+++ b/WindowOpenTK/WindowOpenTK/WindowOpenTK.csproj
@@ -8,6 +8,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Shaders\phong.frag" />
+    <None Remove="Shaders\phong.vert" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Shaders\phong.frag">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Shaders\phong.vert">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="OpenTK" Version="4.9.4" />
   </ItemGroup>
 
